Raise ArgumentError if IO.read is provided negative offset

Fixes [Bug #19380]